# ai-labs-project

./: .gitignore  .mcp.json  CLAUDE.md  dev.sh
docs/: agent-connections.md  api-contracts.md  architect-plan.md  system-internals.md
frontend/: .env  index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: agent.ts
frontend/src/components/: Header.css  (+15 more)
hotel-concierge/: .coverage  .env.example  Makefile  guest_profile.json  pyproject.toml
hotel-concierge/concierge/: __init__.py  app.py  server.py
hotel-concierge/concierge/agents/: __init__.py  discovery.py  intake.py  orchestrator.py  presenter.py  route_planner.py
hotel-concierge/concierge/agents/.adk/: session.db
hotel-concierge/concierge/cache/: __init__.py
hotel-concierge/concierge/config/: __init__.py  api_limits.py  scoring_weights.py  settings.py
hotel-concierge/concierge/middleware/: __init__.py
hotel-concierge/concierge/models/: __init__.py  day_plan.py  discovered_option.py  feedback.py  guest_profile.py
hotel-concierge/concierge/prompts/: brand_voice.md  discovery_system.md  intake_system.md  presenter_system.md  route_planner_system.md
hotel-concierge/concierge/tools/: __init__.py  formatting.py  guest_history.py  map_url.py  places.py  routes.py  scoring.py  state_tools.py  weather.py
hotel-concierge/hotel_concierge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hotel-concierge/tests/integration/: test_server.py
hotel-concierge/tests/unit/: test_formatting.py  test_map_url.py  test_models.py  test_scoring.py  test_settings.py  test_tools.py  test_transform.py
(+2 files in other folders)
